#module5-task1: fix overflow

--- a/sass/components/page-price.scss
+++ b/sass/components/page-price.scss
@@ -5,6 +5,7 @@
   min-height: 372px;
   padding-top: 100px;
   padding-bottom: 18px;
+  overflow: hidden;
 
   &::before {
     content: "";
